--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,11 @@ html {
     margin: 0;
     color: #EBEBEB;
     background-color: #474747;
+    min-height: 100%;
+}
+
+body {
+    min-height: 100%;
 }
 
 * {
@@ -13,6 +18,7 @@ html {
 
 .background {
     max-width: 1920px;
+    height: 2764px;
     background-image: url("../img/bg.png");
     background-repeat: no-repeat;
     background-position: top center;
@@ -23,6 +29,7 @@ html {
     left: 0;
     right: 0;
     z-index: 1;
+    pointer-events: none;
 }
 
 .container {
@@ -61,8 +68,59 @@ html {
 
 #map {
     max-width: 1920px;
-    min-height: 900px;
+    height: 840px;
     background-color: white;
     z-index: 0;
-    margin: 500px auto 0 auto;
+    margin: -60px auto 0 auto;
+    pointer-events: auto;
+}
+
+.photos {
+    position: relative;
+}
+
+.photos img {
+    height: 380px;
+    background: radial-gradient(50% 205.28% at 50% 50.13%, rgba(118, 0, 13, 0) 0%, rgba(118, 0, 13, 0.294) 100%);
+    mix-blend-mode: normal;
+}
+
+.photos div:first-child, .photos div:last-child {
+    position: absolute;
+    perspective: 1000px;
+    margin-top: 50px;
+}
+
+.photos div:first-child img, .photos div:last-child img {
+    height: 280px;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+.photos div:first-child {
+    left: 0;
+}
+
+.photos div:first-child img {
+    transform: rotateY(45deg);
+}
+
+.photos div:last-child {
+    right: 0;
+}
+
+.photos div:last-child img {
+    transform: rotateY(-45deg);
+}
+
+.photos div:nth-child(2) {
+    z-index: 3;
+}
+
+.photos_text {
+    height: 200px;
+}
+
+.photos_text p {
+    width: 320px;
 }
