--- a/css/index.css
+++ b/css/index.css
@@ -66,13 +66,22 @@ body {
     position: relative;
 }
 
-#map {
+.map {
     max-width: 1920px;
-    height: 840px;
+    min-height: 840px;
     background-color: white;
-    z-index: 0;
     margin: -60px auto 0 auto;
     pointer-events: auto;
+    z-index: 0;
+}
+
+.map #map {
+    width: 100%;
+    height: 840px;
+}
+
+.map .map_info {
+    pointer-events: none;
 }
 
 .photos {
@@ -123,4 +132,24 @@ body {
 
 .photos_text p {
     width: 320px;
+}
+
+.arrival {
+    background-image: url("../img/arrival_bg.png");
+    background-repeat: no-repeat;
+    width: 130px;
+    height: 390px;
+    writing-mode: vertical-lr;
+    text-align: left;
+    pointer-events: auto;
+}
+
+.arrival h1 {
+    transform: rotate(180deg);
+}
+
+.address {
+    color: #2A2A2A;
+    text-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    pointer-events: auto;
 }
