--- a/css/index.css
+++ b/css/index.css
@@ -38,16 +38,15 @@ header {
     pointer-events: none;
 }
 
-video{
+.video {
+    height: 515px;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
-.video {
-    height: 28rem;
-    position: relative;
+video {
+    width: 100%;
+    height: 100% !important;
+    object-fit: cover;
 }
 
 .video img {
