--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,7 @@ video {
 
 .map #map {
     width: 100%;
-    height: 840px;
+    height: 890px;
 }
 
 .map .map_info {
@@ -99,6 +99,7 @@ video {
     height: 380px;
     background: radial-gradient(50% 205.28% at 50% 50.13%, rgba(118, 0, 13, 0) 0%, rgba(118, 0, 13, 0.294) 100%);
     mix-blend-mode: normal;
+    object-fit: cover;
 }
 
 .photos div:first-child, .photos div:last-child {
@@ -182,6 +183,14 @@ video {
 
 footer p {
     color: #939393;
+}
+
+#about p {
+    height: 320px;
+}
+
+#zones {
+    height: 760px;
 }
 
 @media (min-width: 1024px) {
